# sherpa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sherpa-preflight.yml
docs/: architecture.html
openspec/changes/archive/2026-05-05-bootstrap-sherpa-mvp/: README.md  proposal.md  tasks.md
openspec/changes/bootstrap-sherpa-mvp/: design.md
openspec/changes/bootstrap-sherpa-mvp/specs/pr-data-ingestion/: spec.md
openspec/changes/generalize-review-agents/: design.md  proposal.md  tasks.md
openspec/changes/generalize-review-agents/specs/knowledge-capture/: spec.md
openspec/specs/pr-data-ingestion/: spec.md
openspec/specs/pre-flight-bot/: spec.md
openspec/specs/review-inference/: spec.md
src/sherpa/: __init__.py  anon.py  config.py
src/sherpa/agent/: __init__.py  base.py  sandbox.py  schema.py
src/sherpa/agent/adapters/: __init__.py  claude.py  codex.py  ollama.py
src/sherpa/bot/: __init__.py  __main__.py  poster.py
src/sherpa/db/: __init__.py  __main__.py  repo.py  schema.sql
src/sherpa/inference/: __init__.py  __main__.py  audit.py  llm.py  prompt.py  runner.py
src/sherpa/ingester/: __init__.py  __main__.py  github.py  poller.py
src/sherpa/knowledge/: __init__.py  __main__.py  inject.py  store.py
src/sherpa/outcomes/: __init__.py  __main__.py  classifier.py  runner.py
src/sherpa/rag/: __init__.py  __main__.py  indexer.py  retriever.py
tests/: test_agent.py  test_anon.py  test_audit_trajectory.py  test_knowledge.py  test_no_approve.py  test_postprocess.py
(+4 files in other folders)
